--- a/whitetheme_v13/public/css/whitetheme.css
+++ b/whitetheme_v13/public/css/whitetheme.css
@@ -1,9 +1,26 @@
-
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+    width: 6px;
+}
+*::-webkit-scrollbar-track {
+    background: var(--scroll-bg);
+}
+*::-webkit-scrollbar-thumb {
+    background-color: var(--scroll-color);
+    border-radius: 20px;
+}
+* {
+    scrollbar-width: thin;
+    scrollbar-color: var(--scroll-color) var(--scroll-bg);
+}
 .awesomplete .input-with-feedback {
-    border:1px solid var(--border-color);
+    border: 1px solid var(--border-color);
 }
 .form-control {
-    border:1px solid var(--border-color);
+    border: 1px solid var(--border-color);
+}
+.search-bar .awesomplete input {
+    background-color: var(--bg-color)
 }
 .modal-backdrop{
     background-color: #2c436b !important;
@@ -16,7 +33,11 @@
     font-weight: 600;
 }
 .comment-box .comment-input-container .ql-editor {
-    border:1px solid var(--border-color);
+    border: 1px solid var(--border-color);
+}
+.duration-picker .duration-input {
+    background-color: var(--bg-color);
+    border: 1px solid var(--border-color);
 }
 .control-label {
     font-weight: 500;
@@ -27,6 +48,8 @@
     --border-color: #1c2126;
     --margin-lg : 15px;
     --text-bold: 600;
+    --scroll-bg: #161a1f;
+    --scroll-color: #1c2126;
 }
 
 [data-theme="light"] {
@@ -36,10 +59,11 @@
     --control-bg-on-gray: #d4dcea;
     --disabled-control-bg: #f2f5fa;
     --heading-color: #333;
-    /*--border-color: #c5d0e2;*/
     --border-color:#e3e8f1;
     --avatar-frame-bg: #dde2ea;
     --margin-lg: 15px;
     --sidebar-select-color: #d4dcea;
     --awesomplete-hover-bg: #d4dcea;
+    --scroll-bg: #eef1f5;
+    --scroll-color: #d9dfe6;
 }
